deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-api-service
  namespace: default
  labels:
    app.kubernetes.io/name: sentry-api
    app.kubernetes.io/part-of: sentryform
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: sentry-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sentry-web-service
  namespace: default
  labels:
    app.kubernetes.io/name: sentry-web
    app.kubernetes.io/part-of: sentryform
spec:
  type: ClusterIP
  selector:
    app: sentry-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
